# chinese-chess-game

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  readme.md
Chess/: chess.cpp  chess.hpp
ChessPiece/: CannonPiece.cpp  CannonPiece.hpp  ChariotPiece.cpp  ChariotPiece.hpp  ChessPiece.cpp  ChessPiece.hpp  ElephantPiece.cpp  ElephantPiece.hpp  GuardPiece.cpp  GuardPiece.hpp  HorsePiece.cpp  HorsePiece.hpp  KingPiece.cpp  KingPiece.hpp  PawnPiece.cpp  PawnPiece.hpp
Engine/: AudioHelper.cpp  AudioHelper.hpp  GameEngine.hpp  IControl.hpp  Point.cpp  Point.hpp
NPC/: npc.cpp  npc.hpp
Player/: player.cpp  player.hpp
Resource/: xiangqi_chessboard.txt
Scene/: anqi_scene.cpp  anqi_scene.hpp  anqi_setting_scene.cpp  anqi_setting_scene.hpp  anqi_start_scene.cpp  anqi_start_scene.hpp  black_win_scene.cpp  black_win_scene.hpp  harmony_scene.cpp  harmony_scene.hpp  login.cpp  login.hpp  mode_select.cpp  mode_select.hpp  play_scene.cpp  play_scene.hpp  playground.cpp  playground.hpp  playground_setting_scene.cpp  playground_setting_scene.hpp  red_win_scene.cpp  red_win_scene.hpp  setting_scene.cpp  setting_scene.hpp  start_scene.cpp  start_scene.hpp  xiangqi_scene.cpp  xiangqi_scene.hpp  xiangqi_win_scene.cpp  xiangqi_win_scene.hpp
UI/Component/: Slider.cpp
backend/: __init__.py  auth.py  database.py  main.py  models.py  requirements.txt  run.py
